--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+permissions:
+  actions: read
+  contents: read
+  security-events: write
 
 jobs:
   build-and-test:
